--- a/navbar.css
+++ b/navbar.css
@@ -149,19 +149,6 @@ body {
     transform: scale(1.02);
 }
 
-.navbar-toggler {
-    border: none;
- 
-    float: right;
-    margin-left: 30vw
-   
-}
-
-.navbar-toggler-icon {
-    
-    float: right;
-  
-}
 
 .certify {
     background-color:rgba(233, 236, 239, 0.09);
@@ -183,7 +170,32 @@ body {
  
 }
 
+/* Hamburger Menu Styles */
+.hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 35px;
+    height: 25px;
+    cursor: pointer;
+float: right;
+
+    position: absolute;
+    right: 6vh; 
+    top:4vh;
+    z-index: 1001;
+
+
+}
+
+
 @media (max-width: 1224px){
+    .icon a img {
+        display: none;
+    }
+  
+}
+@media (max-width: 991px){
     .icon a img {
         display: none;
     }
@@ -198,9 +210,69 @@ body {
        
     
     }
- 
-@media (max-width: 729px) {
-   
+    .sticky-bar{
+        height: auto;
+    }
+   .hamburger{
+    display: flex;
+   }
+   .bar {
+    display: block;
+    height: 4px;
+    width: 100%;
+    background-color: #333;
+    border-radius: 5px;
+  
+    transition: all 0.3s ease-in-out;
+}
+
+
+.hamburger.active .bar:nth-child(1) {
+    transform: translateY(10px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(3) {
+    transform: translateY(-10px) rotate(-45deg);
+}
+}
+@media (max-width: 468px){
+    .hamburger{
+        top:7vh;
+    float: right;
+    right: 10px;
+    }
+} 
+
+@media (max-width: 768px){
+    .hamburger{
+        top:7vh;
+    float: right;
+    }
+    .bar {
+        display: block;
+        height: 4px;
+        width: 100%;
+        background-color: #333;
+        border-radius: 5px;
+        transition: all 0.04s ease-in-out;
+    }
+    
+    /* Animation for active state */
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(10px) rotate(45deg);
+    }
+    
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+    
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-10px) rotate(-45deg);
+    }
 
     .contact {
         flex-direction: row;
@@ -256,10 +328,11 @@ body {
         display: none;
     }
 
-    
+    .sticky-bar{
+        height: auto;
+    }
     
 }
 
 
 
-}
