--- a/navbar.css
+++ b/navbar.css
@@ -124,10 +124,24 @@ body {
 
 .navbar-nav .nav-link:hover {
     color:rgba(22, 24, 24, 0.87) !important;
-    transform: scale(1.07);
+    transform: scale(1.04);
     background-color:rgba(199, 206, 206, 0.37);
     border-radius: 2vh;
     
+}
+.navbar-nav .dropdown-toggle::after {
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-left: 0.3em solid transparent;
+    vertical-align: 0.1em;
+    margin-left: 8px;
+    float: right;
+    transition: transform 0.3s ease-in-out;
+}
+
+/* Rotate arrow when dropdown is active */
+.navbar-nav .dropdown.show .dropdown-toggle::after {
+    transform: rotate(180deg);
 }
 
 .dropdown-menu {
